--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,4 +1,15 @@
 -----------------------------------------------------------------------------------------
+Data Crow 3.4.0.1  [Release on 08/09/2008] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
+This patch fixes the loan functionality.
+
+[Fixed]
+- [2100120] Lost "LoanedBy" movie.
+- [2099205] Unable to check books in.
+- [2089573] Incorrect layout of the File Import screen.
+
+
+-----------------------------------------------------------------------------------------
 Data Crow 3.4      [Release on 31/08/2008] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 This version comes with new functionality, fixes and an improved upgrade process.
