--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,6 +1,14 @@
 -----------------------------------------------------------------------------------------
 Data Crow 3.4.1 [Release on 27/09/2008] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
+
+[Fixed]
+- Incorrect upgrade proposals on startup.
+
+
+-----------------------------------------------------------------------------------------
+Data Crow 3.4.1 [Release on 27/09/2008] [testing: high] [target: production]
+-----------------------------------------------------------------------------------------
 This release upgrades the existing loan functionality. A due date has been added and the
 loan information can now be viewed in a specialized dialog.
 Items now show which items are using them; actors have a separate tab to show in which 
