--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -4,6 +4,10 @@ Data Crow 3.4.1 [Release on 27/09/2008] [testing: high] [target: production]
 
 [Fixed]
 - Incorrect upgrade proposals on startup.
+- Service URL not set by some online searches
+- Setting value without override of existing value fails even if the current value is
+  empty.
+- 
 
 
 -----------------------------------------------------------------------------------------
