--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.1 [Release on 27/09/2008] [testing: high] [target: production]
+Data Crow 3.4.2 [Release on 27/09/2008] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 
 [Fixed]
@@ -7,6 +7,7 @@ Data Crow 3.4.1 [Release on 27/09/2008] [testing: high] [target: production]
 - Service URL not set by some online searches
 - Setting value without override of existing value fails even if the current value is
   empty.
+- Sir name and first names were mixed.
 - 
 
 
