*** empty log message ***

--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -14,6 +14,9 @@ Data Crow 3.4.2 [Release on xx/xx/2008] [testing: high] [target: production]
 - Changed the height of the input fields (21 to 25). The field height can now also be changed
   from the Look and Feel Settings Dialog.
 
+[Removed]
+- Bol.com search has been removed. This search engine is awaiting a new implementation.
+
 [Fixed]
 - Incorrect upgrade proposals on startup.
 - Service URL not set by some online searches
