--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -1,21 +1,26 @@
 -----------------------------------------------------------------------------------------
-Data Crow 3.4.4 [Release on 01/12/2008] [testing: high] [target: production]
+Data Crow 3.4.4 [Release on xx/xx/2008] [testing: high] [target: production]
 -----------------------------------------------------------------------------------------
 The code has been reviewed and many small improvements have been made. As a result
 of this, this version uses less memory and has once again an improved start up time.
 
 I have been working quite hard to get the code documented. The emphasis for this release
 is again.. quality! I was quite happy with the stability of the 3.4.3 version but not
-with the amount of fixes needed to get there. 
+with the amount of fixes needed to get there. This release also contains documentation 
+on developing plugins and online services. Hopefully this will pay off in people in 
+actually starting to create new additions for Data Crow :-)
 
-This release also contains documentation on developing plugins and online services.
-Hopefully this will pay off in people in actually starting to create new additions for
-Data Crow!
-
-Finally I dare to say that Data Crow is becoming mature. 
+Please note that a new version of the web module is available (version 1.2).
 
 [Fixed]
-- 
+- [2334235] Over Due Bug. 
+  Loan administration shows items with a due date for the next year as overdue.
+- [2338017] Missing horizontal scroll bar. 
+  The quick view does not have a vertical scroll bar.
+
+[Changed]
+- The web server can now be started from the command line without starting the Data Crow
+  application. The parameter to use is: -webserver. 
 
 
 -----------------------------------------------------------------------------------------
