--- a/readme/datacrow/changelog.txt
+++ b/readme/datacrow/changelog.txt
@@ -21,7 +21,9 @@ needs to be installed on top of Data Crow in order for the web module to be avai
 
 [Changed]
 - The web server can now be started from the command line without starting the Data Crow
-  application. The parameter to use is: -webserver. 
+  application. The parameter to use is: -webserver.
+- The display format for person names can now be set using the settings dialog.
+  (Settings > General Settings > 'Default display format for the persons name').
   
 [Components]
 - Updated Jetty to the latest version (6.1.14)
